--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-ga": "^2.5.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
