--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "https://chadali.github.io",
   "dependencies": {
+    "cryptiles": "^4.1.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-ga": "^2.5.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
