--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "homepage": "https://chadali.github.io",
   "dependencies": {
-    "cryptiles": "^4.1.2",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-ga": "^2.5.3",
+    "cryptiles": "^4.1.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-ga": "^2.5.6",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4",
-    "url-parse": "^1.4.3"
+    "react-scripts": "^2.1.2",
+    "url-parse": "^1.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,5 +22,11 @@
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
