--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chadali.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chadali.github.io",
+  "homepage": "https://chadali.com",
   "dependencies": {
     "cryptiles": "^4.1.3",
     "react": "^16.7.0",
