--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "chadali.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://chadali.com",
+  "homepage": "https://chadali.github.io",
   "dependencies": {
     "cryptiles": "^4.1.3",
+    "firebase": "^7.6.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.6",
